--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -6,22 +6,24 @@
 </head>
 <body>
 
-<h1>Best of the year by <span th:text="${ownerName}"></span></h1>
-
-<h3> Best films: </h3>
+<h1>Best of the year by <span th:text="${ownerName}"></span>:</h1>
 <ul>
-    <li th:each="film: ${bestFilms}">
-        <span th:text="${film}"></span>
+    <li th:each="string: ${stringList}">
+        <span th:text="${string}"></span>
     </li>
 </ul>
 
+<button>
+    <a href="http://localhost:8080/songs">
+        songs
+    </a>
+</button>
 
-<h3> Best songs: </h3>
-<ul>
-    <li th:each="song: ${bestMusics}">
-        <span th:text="${song}"></span>
-    </li>
-</ul>
+<button>
+    <a href="http://localhost:8080/movies">
+        movies
+    </a>
+</button>
 
 </body>
 </html>
