--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -14,6 +14,12 @@
 </ul>
 
 <button>
+    <a href="http://localhost:8080">
+        home
+    </a>
+</button>
+
+<button>
     <a href="http://localhost:8080/songs">
         songs
     </a>
