--- a/src/main/resources/templates/home-page.html
+++ b/src/main/resources/templates/home-page.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1>Best of the year by <span th:text="${ownerName}"></span>:</h1>
+<div><span th:each="string: ${stringList}"><span th:text="|${string}, |"></span></span></div>
 <ul>
     <li th:each="string: ${stringList}">
         <span th:text="${string}"></span>
