--- a/src/main/resources/templates/details-page.html
+++ b/src/main/resources/templates/details-page.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Details</title>
+<head th:insert="~{/fragments/resources :: headResources(${pageTitle})}">
 </head>
 <body>
 
-<h1 th:text="${detail.getTitle()}"></h1>
+<div class="container">
+    <nav th:replace="~{/fragments/navbar :: topNavbar(${pageTitle})}"></nav>
+
+    <h1 th:text="${detail.getTitle()}"></h1>
+</div>
+
 
 </body>
 </html>
